test/data/semantic/bad/duplicate_enum_variant.coy
enum E {
    A(),
    A()
}

fn main () -> () {
    ()
}
